SERVER-56221 $dateAdd ignores startDate milliseconds